<resources>
    <!--intro-->
    <string name="app_name" translatable="false">Stats On</string>
    <string name="goCBSCcarga" translatable="false">#goCBSC</string>
    <string name="goCBSC" translatable="false">goCBSC</string>
    <string name="hello_blank_fragment" translatable="false">Helloworld</string>

    <!--menu-->
    <string name="partido_nuevo">Partido Nuevo</string>
    <string name="resultados">Resultados</string>
    <string name="mi_equipo">Mi Equipo</string>
    <string name="opciones">Opciones</string>

    <!--barraSuperior-->
    <string name="done">Done</string>
    <string name="siguiente">Siguiente</string>
    <string name="guardar">Guardar</string>
    <string name="acabarPartido">Acabar Partido</string>
    <string name="vistaPrevia">Vista Previa</string>

    <!--equipo_rival-->
    <string name="e_rival">Equipo Rival</string>
    <string name="nombrerival">Nombre del rival</string>
    <string name="rosters">Plantilla</string>

    <!--añadirJugador-->
    <string name="jugador">Jugador</string>
    <string name="jugadorNombre">Nombre Jugador</string>
    <string name="jugadorDorsal">Dorsal</string>
    <string name="crear">Crear</string>

    <!--listaJugadores-->
    <string name="jugadores">Jugadores</string>
    <string name="santaColoma">Santa Coloma</string>
    <string name="anyadirjugador">Añadir Jugador</string>
    <string name="rivales">Equipos rivales</string>
    <string name="partidos">Partidos</string>

    <!--opciones-->
    <string name="minutos">Minutos</string>
    <string name="periodos">Periodos</string>
    <string name="minpe">Min. PE</string>
    <string name="_10" translatable="false">10</string>
    <string name="_12" translatable="false">12</string>
    <string name="_4" translatable="false">4</string>
    <string name="_8" translatable="false">8</string>
    <string name="_5" translatable="false">5</string>
    <string name="_3" translatable="false">3</string>
    <string name="_6" translatable="false">6</string>

    <!--game-->
    <string name="teamB">TeamB</string>
    <string name="periodo">Periodo</string>
    <string name="cambio">Cambio</string>
    <string name="tiempoM">Tiempo M.</string>

    <string name="faltaR">Falta recibida</string>
    <string name="faltaC">Falta cometida</string>

    <string name="taponC">Tapón cometido</string>
    <string name="taponR">Tapón recibido</string>

    <string name="balonP">Pérdida de balón</string>
    <string name="balonR">Robo de balón</string>

    <string name="reboteO">Rebote ataque</string>
    <string name="reboteD">Rebote defensa</string>

    <string name="t3mas" translatable="false">T3 +</string>
    <string name="t2mas" translatable="false">T2 +</string>
    <string name="tlmas" translatable="false">TL +</string>
    <string name="t3menos" translatable="false">T3 -</string>
    <string name="t2menos" translatable="false">T2 -</string>
    <string name="tlmenos" translatable="false">TL -</string>

    <string name="asistencia">Asistencia</string>
    <string name="deshacer">Deshacer</string>


    <!--emergentesGame-->
    <string name="robo">Robo</string>
    <!-- <string name="faltaRecibida">F.Recibida</string>-->
    <!-- <string name="rebote">Rebote</string>-->
    <!-- <string name="taponRecibido">Tapón Recibido</string>-->

    <string name="rostro">Rostro</string>
    <string name="iniciarPartido">Iniciar Partido</string>
    <string name="puntos">Puntos</string>
    <string name="puntosporpartido" translatable="false">PPP</string>
    <string name="tirosIntentados" translatable="false">TI</string>
    <string name="tirosIntentadosPorPartido" translatable="false">TIPP</string>
    <string name="foto">Foto</string>
    <string name="nombre">Nombre</string>
    <string name="dorsal">Dorsal</string>
    <string name="eliminar">eliminar</string>
    <string name="jugar">Jugar</string>
    <string name="min" translatable="false">MIN</string>
    <string name="pts" translatable="false">PTS</string>
    <string name="ptsporcentaje" translatable="false">PTS %</string>
    <string name="T2porcentaje" translatable="false">T2 %</string>
    <string name="T3porcentaje" translatable="false">T3 %</string>
    <string name="TLporcentaje" translatable="false">TL %</string>
    <string name="rebotesOf" translatable="false">R Of</string>
    <string name="rebotesDef" translatable="false">R Def</string>
    <string name="rebotesTotales" translatable="false">R T</string>
    <string name="asist" translatable="false">AST</string>
    <string name="recuperadas" translatable="false">REC</string>
    <string name="tapones" translatable="false">Tapones</string>
    <string name="taponesrecibidos" translatable="false">TAP R</string>
    <string name="faltas">Faltas</string>
    <string name="faltasrecibidas" translatable="false">F R</string>
    <string name="perdidas" translatable="false">PER</string>
    <string name="vs" translatable="false">VS</string>
    <string name="local">Local</string>
    <string name="visitante">Visitante</string>
    <string name="cuarto">Cuarto</string>
    <string name="paswd">Contraseña</string>
    <string name="email">Correo</string>

    <string name="login">Iniciar sesión</string>
    <string name="singin">Registrarse</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="noCuenta">¿Todavía no tienes cuenta?</string>
    <string name="siCuenta">¿Ya tienes cuenta?</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="anyadirequipo">Añadir equipo rival</string>
    <string name="equipo">Equipo</string>
    <string name="nombreEquipo">Nombre equipo</string>
    <string name="crearcuernta">Crear cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="seleccinaRival">Selecciona equipo rival para el partido:</string>
    <string name="jugarasComoLocal">Jugarás como local o visitante?</string>
    <string name="tl">TL</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="rebotes">Rebotes</string>
    <string name="balones">Balones</string>
    <string name="pasos">Pasos</string>
    <string name="dobles">Dobles</string>
    <string name="violaciontecnica">V.T.</string>
    <string name="asis">As</string>
    <string name="valoracion">Val</string>
    <string name="totales">Tot</string>
    <string name="acertados">Ac</string>
    <string name="fallados">Fa</string>
    <string name="tla">TLA</string>
    <string name="tli">TLI</string>
    <string name="t2a">T2A</string>
    <string name="t2i">T2I</string>
    <string name="t3a">t3A</string>
    <string name="t3i">T3I</string>
    <string name="tot">TOT</string>
    <string name="of">OF</string>
    <string name="def">DEF</string>
    <string name="cometidas">COM</string>
    <string name="recibidas">REC</string>
    <string name="com">COM</string>
    <string name="resetPasswd">¿Has olvidado la contraseña?</string>
    <string name="recuperar_Contrasenya">Recuperar Contraseña</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesion con Google</string>
    <string name="enviar">Enviar</string>
    <string name="minutosPE">minutosPE</string>
    <string name="min_saved_player">min_saved_player</string>
    <string name="min_pe_saved_player">min_pe_saved_player</string>
    <string name="periodos_saved_player">periodos_saved_player</string>

    <!--table-->
    <string-array name="header_table">
        <item>@string/jugador</item>
        <item>TL</item>
        <item>TL+</item>
        <item>TL-</item>
        <item>T2</item>
        <item>T2+</item>
        <item>T2-</item>
        <item>T3</item>
        <item>T3+</item>
        <item>T3-</item>
    </string-array>
    <string name="fRecibida">F. Recibida</string>
    <string name="tapon">Tapón</string>
    <string name="perdida">Pérdida</string>
    <string name="faltaRecibida">F. Recibida</string>
    <string name="rebote">Rebote</string>
    <string name="taponRecibido">Tapón Recibido</string>


</resources>