<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".EquipoBFragment"
android:layout_width="match_parent"
android:layout_height="match_parent">

<include android:id="@+id/toolbarDone"
    layout="@layout/toolbar_done"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_marginTop="40dp"
    android:padding="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tituloResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/postnobillsjaffna_extrabold"
            android:text="@string/teamB"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/postnobillsjaffna_extrabold"
            android:text="@string/rosters"
            android:textSize="33sp"
            android:gravity="end|bottom"
            android:paddingTop="72dp"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaJugadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/recyclerv_round" />

    <Button
        android:id="@+id/anyadirjugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anyadirjugador"/>
</LinearLayout>
</RelativeLayout>