<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragment">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="80dp"
        tools:context=".MenuFragment">

        <Button
            android:id="@+id/botonPartidoNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_change"
            android:padding="10dp"
            android:text="@string/partido_nuevo"
            android:textColor="@color/red"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/botonResultados"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/botonResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_change"
            android:textColor="@color/red"
            android:text="@string/resultados"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/botonPartidoNuevo"
            app:layout_constraintBottom_toTopOf="@id/botonMiEquipo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"/>

        <Button
            android:id="@+id/botonMiEquipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_change"
            android:textColor="@color/red"
            android:text="@string/mi_equipo"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/botonResultados"
            app:layout_constraintBottom_toTopOf="@id/botonOpciones"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"/>

        <Button
            android:id="@+id/botonOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_change"
            android:textColor="@color/red"
            android:text="@string/opciones"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/botonMiEquipo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

