<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="100dip"
    tools:context=".MainActivity" >
    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none" >
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2"
        android:gravity="center">
        <TableRow
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/jugador"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minutos"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/puntos"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/t2mas"
                android:layout_margin="1dp"
                android:layout_column="3"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/t2menos"
                android:layout_margin="1dp"
                android:layout_column="4"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/t3mas"
                android:layout_margin="1dp"
                android:layout_column="5"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/t3menos"
                android:layout_margin="1dp"
                android:layout_column="6"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tlmas"
                android:layout_margin="1dp"
                android:layout_column="7"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tlmenos"
                android:layout_margin="1dp"
                android:layout_column="8"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rebotesOf"
                android:layout_margin="1dp"
                android:layout_column="9"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rebotesDef"
                android:layout_margin="1dp"
                android:layout_column="10"
                android:textColor="@color/white"
                android:background="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>
        <TableRow
            android:background="@color/black"
            android:layout_width="fill_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Daniel"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="33:54"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="12"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                />
        </TableRow>


    </TableLayout>
</HorizontalScrollView>
</RelativeLayout>