<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJugadorFragment"
    android:background="@color/background"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jugador"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingBottom="100dp"
        android:textColor="@color/white"/>
    <!--TODO: font family
    android:fontFamily="" -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/add_jugador"
            android:textAlignment="center" />

    </RelativeLayout>
    <!--TODO: aligment button-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/nombreJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/reddark"
        android:hint="@string/jugadorNombre"
        android:background="@drawable/textedit_round"/>
    <!--TODO: padding between both edittext-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/dorsalJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/jugadorDorsal"
        android:background="@drawable/textedit_round"/>

</LinearLayout>