<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuOptionsFragment">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="120dp"
        tools:context=".MenuOptionsFragment">

        <Button
            android:id="@+id/botonPartidoNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/red"
            android:text="@string/partido_nuevo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/botonResultados"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"/>

        <Button
            android:id="@+id/botonResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/resultados"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@id/botonOpcionescargado"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botonPartidoNuevo" />

        <Button
            android:id="@+id/botonOpcionescargado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:alpha="0.65"
            android:textColor="@color/white"
            android:text="@string/opciones"
            app:layout_constraintTop_toBottomOf="@id/botonResultados"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>