<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EquipoRivalFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="35dp">
        <ImageButton
            android:id="@+id/boton_come_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <Button android:id="@+id/botonSiguienteERival"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/siguiente"
            android:background="@color/black_80"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center" />
    </LinearLayout>


    <TextView
        android:id="@+id/tituloRival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_rival"
        android:fontFamily="@font/postnobillsjaffna_extrabold"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"/>


    <LinearLayout android:id="@+id/linearChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:background="@drawable/recyclerv_round_black"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"/>
        <com.polyak.iconswitch.IconSwitch
            android:id="@+id/icon_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:isw_thumb_color_left="@color/reddark"
            app:isw_thumb_color_right="@color/redwhite"
            app:isw_inactive_tint_icon_left="@color/black"
            app:isw_inactive_tint_icon_right="@color/black"
            app:isw_background_color="@color/white"
            app:isw_active_tint_icon_left="@color/white"
            app:isw_active_tint_icon_right="@color/black_30"
            app:isw_icon_left="@drawable/home"
            app:isw_icon_right="@drawable/away" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitante"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaEquipos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"/>

</LinearLayout>